  * add border around navigation pane (LP: #433520)
  * do not raise if entering the password takes too long (LP: #432704)
  * softwarestore/view/appview.py:
    - fix bug in on_iter_nth_child()
  * when a transaction is triggered and there is no other transaction
    already queued, jump to the "in progress" view (LP: #426257)
  * Fix usage of "Pending" to "In progress" (LP: #434088)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 21 Sep 2009 17:50:10 +0200

software-store (0.3.6.1) karmic; urgency=low

  * debian/control:
    - add missing build-depend to lsb-release

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 18 Sep 2009 18:00:54 +0200

software-store (0.3.6) karmic; urgency=low

  [ Michael Vogt ]
  * data/ui/SoftwareStore.ui
    - use &#xA9; instead (c) (LP: #431298)
  * softwarestore/SimpleGtkbuilderApp.py, softwarestore/app.py:
    - fix gettext domain in gtkbuilder (thanks to sianis)
  * po/hu.po:
    - new translation, thanks to Gabor Kelemen 
  * softwarestore/view/basepane.py:
    - fix crash when no adjustment is available (LP: #432126)
  * setup.py:
    - auto-generate softwarestore/version.py on build to ensure
      version information is always valid 
  * softwarestore/view/appdetailsview.py:
    - set user-agent string to software-store
  * softwarestore/view/pendingview.py:
    - do not crash if a transaction can not be canceled, but log
      a error instead
  * implement dbus service that informs the GUI if the database
    is rebuild in the background and make the UI insensitive 
    while a rebuild is in progress
  
  [ Andrew Higginson ]
  * debian/control:
    - better description
    - add depedency to python-sexy (LP: #432173)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 18 Sep 2009 17:16:46 +0200

software-store (0.3.4) karmic; urgency=low

  * softwarestore/view/appview.py:
    - fix crash in on_iter_children() LP: #427630
  * merged lp:~sil/software-store/run-uninstalled, many
    thanks to Stuart Langridge 